feat: Enhance chat assistant with image upload
Adds image upload capability to the chat assistant, allowing users to provide photos of their space for personalized design advice. Updates Gemini service to handle image data. Includes minor title and style adjustments in index.html. Updates tsconfig and package.json for improved TypeScript setup and dependencies.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homie Pro | Curated Home Decor</title>
+    <title>Homie Pro | Premium Curated Decor</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <style>
@@ -29,6 +28,9 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #555;
         }
+        .ai-glow {
+            box-shadow: 0 0 20px rgba(79, 70, 229, 0.2);
+        }
     </style>
 <script type="importmap">
 {
@@ -47,7 +49,6 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-    <!-- Add the script entry point for Vite -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
